# docs/api/openapi.json
@@ -1232,6 +1232,11 @@
           "initialized": {
             "title": "Initialized",
             "type": "boolean"
+          },
+          "setup_token_required": {
+            "default": false,
+            "title": "Setup Token Required",
+            "type": "boolean"
           }
         },
         "required": [
